--- a/ansible/playbooks/vagrant-deploy.yml
+++ b/ansible/playbooks/vagrant-deploy.yml
@@ -32,14 +32,14 @@
     
     - name: Detect architecture
       set_fact:
-        docker_platform: "{{ 'linux/arm64' if (ansible_architecture == 'aarch64' or ansible_architecture == 'arm64') else 'linux/amd64' }}"
-        is_arm64: "{{ ansible_architecture == 'aarch64' or ansible_architecture == 'arm64' }}"
+        docker_platform: "{{ 'linux/arm64' if (ansible_facts['architecture'] == 'aarch64' or ansible_facts['architecture'] == 'arm64') else 'linux/amd64' }}"
+        is_arm64: "{{ ansible_facts['architecture'] == 'aarch64' or ansible_facts['architecture'] == 'arm64' }}"
     
     - name: Display architecture and deployment info
       debug:
         msg:
           - "Deploying YoctoBuilder to Vagrant VM"
-          - "Architecture: {{ ansible_architecture }}"
+          - "Architecture: {{ ansible_facts['architecture'] }}"
           - "Docker platform: {{ docker_platform }}"
           - "Application will be available at http://localhost:3000"
     
@@ -47,7 +47,7 @@
       apt:
         update_cache: yes
         cache_valid_time: 3600
-      when: ansible_os_family == "Debian"
+      when: ansible_facts['os_family'] == "Debian"
 
   roles:
     - common
