--- a/ansible/playbooks/ansible.cfg
+++ b/ansible/playbooks/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
-inventory = inventory/
-roles_path = /vagrant/ansible/roles
+inventory = ../inventory/
+roles_path = ../roles
 host_key_checking = False
 retry_files_enabled = False
 stdout_callback = default
